Added feign clients in all servers

--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -21,9 +21,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     implementation "org.zalando:logbook-spring-boot-starter:2.11.0"
     implementation "org.zalando:logbook-json:2.11.0"
+
+    implementation project(":rest-libs")
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
