--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 server.port=8888
+spring.application.name=config-service
 
 spring.cloud.config.server.git.uri=https://github.com/bimurto/spring-cloud-architecture-config.git
-#spring.cloud.config.server.git.clone-on-start=true
-
-logging.level.root=debug
