--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,6 @@ include 'user-service'
 include 'product-service'
 include 'payment-service'
 include 'config-service'
+include 'discovery-service'
+include 'rest-libs'
 
