Added circuit breaker

--- a/rest-libs/build.gradle
+++ b/rest-libs/build.gradle
@@ -19,6 +19,7 @@ ext {
 dependencies {
     compileOnly 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    compileOnly 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 }
 
 dependencyManagement {
