--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -23,8 +23,12 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 
     implementation project(":rest-libs")
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
     implementation "org.zalando:logbook-spring-boot-starter:2.11.0"
     implementation "org.zalando:logbook-json:2.11.0"
