--- a/discovery-service/build.gradle
+++ b/discovery-service/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 
