--- a/product-service/build.gradle
+++ b/product-service/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 
     implementation "org.zalando:logbook-spring-boot-starter:2.11.0"
     implementation "org.zalando:logbook-json:2.11.0"
